Make CLI using config file instead of ENV for URL